attempt to fix horizontal scrollbar being visible on chrome

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -19,8 +19,6 @@ html
     font-family: Verdana;
     
     color-scheme: dark light;
-    
-    width: 100vw;
 }
 
 body
